Fix button spacing

--- a/_src/sass/partials/admin/_nav-edit.scss
+++ b/_src/sass/partials/admin/_nav-edit.scss
@@ -3,7 +3,7 @@
 	border:solid 1px $brand-tertiary;
 	display: inline-block;
 	font-size: 1.4rem;
-	margin:1rem;
+	margin:0 0.5rem;
 	padding:0.5rem;
 	
 	&.success{
